# Topsis-Samiksha-102317096

./: README.md
Program1/: 102317096-data.csv  102317096-result.csv  102317096.py  README.md
Program2 (Pypi package)/: .gitignore  LICENSE  pyproject.toml  setup.py
Program2 (Pypi package)/topsis_samiksha_102317096/: __main__.py  topsis.py
Program3 (Webapp)/: .gitignore  .vercelignore  README.md  app.py  requirements.txt
Program3 (Webapp)/samples/: sample_laptops.csv  sample_mobiles.csv
Program3 (Webapp)/templates/: index.html
topsis_samiksha_102317096/: __init__.py
