[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Topsis-Samiksha-102317096"
version = "0.1.1"
description = "A Python package for TOPSIS analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Samiksha", email = "samikshabansal2005@example.com"}
]
dependencies = ["numpy", "pandas"]

[project.scripts]
topsis = "topsis_samiksha_102317096.topsis:main"

[tool.setuptools]
packages = ["topsis_samiksha_102317096"]
